export enum Level {
  DEBUTANT = 'DEBUTANT',

  INTERMEDIAIRE = 'INTERMEDIAIRE',

  AVANCE = 'AVANCE',

  EXPERT = 'EXPERT',
}
