export enum Role {
  ADMIN = 'ADMIN',

  RH = 'RH',

  MANAGER = 'MANAGER',

  EXPERT = 'EXPERT',

  EMPLOYEE = 'EMPLOYEE',
}
