export enum TestMode {
  CLASSIQUE = 'CLASSIQUE',

  DISCRET = 'DISCRET',
}
